--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body> 
 <p> hei </p>
-<h3> Under konstruksjon </h3>
+<h3> Under konstruksjon lmao fantasy king </h3>
 <p> Vær tolmodig </p>	
 </body>
 
